--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="string_google_maps">Google Maps</string>
     <string name="google_maps_key">AIzaSyDwttufkByVoZwPBopwyUVmKutvcEmil2Y</string>
+    <string name="title_activity_teste">Teste</string>
 </resources>
